# sfinae

./: .travis.yml  CMakeLists.txt  Doxyfile  README.md  annotated.html  classes.html  classes_0.js  files.html  main.cpp  md_README.html  pages.html  pages_0.js  searchdata.js  sfinae__templ_8h_source.html  sfinae_templ.h  structsfinae__templ_1_1is__container-members.html  structsfinae__templ_1_1is__container.html  structsfinae__templ_1_1is__container_3_01std_1_1list_3_01T_01_4_01_4-members.html  structsfinae__templ_1_1is__container_3_01std_1_1list_3_01T_01_4_01_4.html  structsfinae__templ_1_1is__container_3_01std_1_1vector_3_01T_01_4_01_4-members.html  structsfinae__templ_1_1is__container_3_01std_1_1vector_3_01T_01_4_01_4.html  structsfinae__templ_1_1is__string-members.html  structsfinae__templ_1_1is__string.html
.github/workflows/: main.yml
